2009-08-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Allow
	  calling a method of the class of the current
	  debugging-scope. Fixes bug #525258.

2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Evaluation/Backtrace.cs: Remove unused file.

2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/Backtrace.cs:
	* Mono.Debugging.Evaluation/RawViewSource.cs:
	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Evaluation/ArrayElementGroup.cs:
	* Mono.Debugging.Evaluation/EvaluationContext.cs:
	* Mono.Debugging.Evaluation/TypeValueReference.cs:
	* Mono.Debugging.Evaluation/ICollectionAdaptor.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/NullValueReference.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs:
	* Mono.Debugging.Evaluation/ExpressionEvaluator.cs:
	* Mono.Debugging.Evaluation/ArrayValueReference.cs:
	* Mono.Debugging.Evaluation/LiteralValueReference.cs:
	* Mono.Debugging.Evaluation/FilteredMembersSource.cs:
	* Mono.Debugging.Evaluation/UserVariableReference.cs:
	* Mono.Debugging.Evaluation/NamespaceValueReference.cs: Get
	  rid of generic classes because they are causing a lot of
	  trouble in mono.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Workaround
	  to a bug in mono 2.0. That mono version fails to compile an
	  anonymous method in GetExpressionValuesAsync.

2009-06-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation\TypeValueReference.cs: Only show
	  static members as children of types.

	* Mono.Debugging.Evaluation\NRefactoryEvaluator.cs: Don't
	  crash if a method evaluation returns 'void'.

	* Mono.Debugging.Evaluation\LiteralValueReference.cs: Properly
	  support literal expressions.
